# chessGPT

./: .gitignore  README.md  requirements.txt
data/: Cargo.toml
data/src/: main.rs  main1.rs  pgn_parser.rs  pgn_reader.rs  utils.rs
data_collection/: test.json
data_collection/src/: main.rs
dataset/: Cargo.toml  encoder.json  output.games  test.json
dataset/src/: main.rs  pgn_parser.rs  pgn_reader.rs  tokenizer.rs
