[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
clap = { version = "4.5.2", features = ["derive"] }
pgn-reader = "0.25.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = "1.0.197"
serde_json = "1.0.114"
sha256 = "1.5.0"
shakmaty = "0.26.0"
tempdir = "0.3.7"
tokio = { version = "1.36.0", features = ["full"] }
zip = "0.6.6"
